--- a/controlpad.html
+++ b/controlpad.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <span>Please click this window so we can capture your key presses!!</span>
+        <script src="lib/photopea.js"></script>
         <script src="code.js"></script>
     </body>
 </html>
