--- a/controlpad.html
+++ b/controlpad.html
@@ -4,7 +4,7 @@
 
     </head>
     <body>
-        <span>Please click this window so we can capture your key presses!!</span>
+        <span style="color: red;">Please click this window so we can capture your key presses!!</span>
         <script src="lib/photopea.js"></script>
         <script src="code.js"></script>
     </body>
