--- a/controlpad.html
+++ b/controlpad.html
@@ -4,8 +4,13 @@
 
     </head>
     <body>
-        <span style="color: red;">Please click this window so we can capture your key presses!!</span>
+        <button style="padding: 10px;">FLAP</button>
         <script src="lib/photopea.js"></script>
+        <script src="lib/addImageAndWait.js"></script>
+        <script src="circularCollision.js"></script>
+        <script src="render.js"></script>
+        <script src="update.js"></script>
+        <script src="setup.js"></script>
         <script src="code.js"></script>
     </body>
 </html>
