--- a/controlpad.html
+++ b/controlpad.html
@@ -5,12 +5,11 @@
     </head>
     <body>
         <button style="padding: 10px;">FLAP</button>
-        <script src="lib/photopea.js"></script>
-        <script src="lib/addImageAndWait.js"></script>
-        <script src="circularCollision.js"></script>
-        <script src="setup.js"></script>
-        <script src="render.js"></script>
-        <script src="update.js"></script>
-        <script src="code.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/photopea@1.1.1/dist/photopea.min.js" type="module"></script>
+        <script src="circularCollision.js" type="module"></script>
+        <script src="setup.js" type="module"></script>
+        <script src="render.js" type="module"></script>
+        <script src="update.js" type="module"></script>
+        <script src="code.js" type="module"></script>
     </body>
 </html>
